# if-proto-scip-hs

./: CHANGELOG.md  LICENSE  README.md  haskell-scip.cabal  if-proto-scip-hs.cabal
.github/workflows/: ci.yml
src/Proto/Src/: Scip.hs  Scip_Fields.hs
tests/: Main.hs
tests/java/: README.md  index.scip  pom.xml
