cabal-version:      3.6

name:               if-proto-scip-hs
version:            0.1.0.0
synopsis:           Haskell client for SCIP indexers
license:            BSD-3-Clause
license-file:       LICENSE
author:             Don Stewart
maintainer:         dons00@gmail.com
homepage:           https://github.com/donsbot/if-proto-scip-hs
category:           Language
extra-doc-files:    CHANGELOG.md
build-type:         Simple
extra-source-files: proto/scip.proto

library
    ghc-options: -Wall
    exposed-modules:
        Proto.Src.Scip,
        Proto.Src.Scip_Fields
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends: proto-lens-runtime, base
