cabal-version:      3.6

name:               if-proto-scip-hs
version:            0.1.0.0
synopsis:           Haskell client for SCIP indexers
license:            BSD-3-Clause
license-file:       LICENSE
author:             Don Stewart
maintainer:         dons00@gmail.com
homepage:           https://github.com/donsbot/if-proto-scip-hs
category:           Language
extra-doc-files:    CHANGELOG.md
build-type:         Simple
extra-source-files: scip.proto


library
    default-language: Haskell2010
    ghc-options: -Wall
    exposed-modules:
        Proto.Scip,
        Proto.Scip_Fields
    hs-source-dirs: src
    build-depends: proto-lens-runtime, base

test-suite basic
    hs-source-dirs: tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    ghc-options: -main-is Main
    build-depends: if-proto-scip-hs, proto-lens, base, bytestring
